--- a/classes/MedicalDeviceReturnController.cls
+++ b/classes/MedicalDeviceReturnController.cls
@@ -36,7 +36,27 @@ public with sharing class MedicalDeviceReturnController {
                 System.debug('-->Ser'+allSerilizedProductsList);
         return allSerilizedProductsList;
     }
-      
+    /*
+    Method: fetchSerilizedProductsforReturn
+    Developer : psahoo
+    Date: 06/09/2022
+    Description: This Method is used to get the serialized products lists for Return using the parent case Id
+	related to the account
+    */    
+    @AuraEnabled(cacheable=true)
+    public static List<String> getSerializedProductsInTheCase(String caseId, String productId){
+        Set<string> allSentSerilizedProductsList = new Set<String>();
+        List<String> res = new List<String>();
+        for(SerializedProduct sp: [SELECT Id,SerialNumber   FROM SerializedProduct WHERE Status='Sent' AND ProductItemId ='' AND Product2Id =: productId]){
+            allSentSerilizedProductsList.add(sp.SerialNumber);
+        }
+        for(Generic_Case_KPI__c sp: [SELECT Id, SerialNumber__c, Case__c   FROM Generic_Case_KPI__c  WHERE Case__c =: caseId]){
+            if(allSentSerilizedProductsList.contains(sp.SerialNumber__c)){
+                res.add(sp.SerialNumber__c);
+            }
+        }       
+        return res;
+    }
     @AuraEnabled
     public static List<Case> fetchCaseReturns(String type, Integer limitSize, Integer offset){
         return [SELECT Id,CaseNumber,Account.Name,AccountId, ContactId ,Status,Type,Subject,ProductId,Product.Name,Location__r.Name,Location__c,Requested_Date__c,Quantity__c, From_Date__c ,To_Date__c, Contact.Name  FROM Case WHERE Status='New' And Type=:type ORDER BY Account.Name DESC LIMIT:limitSize OFFSET:offset];
@@ -52,5 +72,21 @@ public with sharing class MedicalDeviceReturnController {
     public static Date getTodaysDate(){
 		Date todaysDate = System.today();
         return todaysDate;
+    }
+    
+    /*
+    Method: fetchAllCaseReturns
+    Developer : psahoo
+    Date: 24/08/2022
+    Description: This Method is used to get all the record values of the return cases
+    */
+    @AuraEnabled
+    public static Map<String, Integer> fetchAllCaseReturns(){
+        Integer loanRecCount = [Select count() FROM Case WHERE Type='Loan Device Return'AND Status='New'];
+        Integer trialRecCount = [Select count() FROM Case WHERE Type='Trial Device Return'AND Status='New'];
+        return new Map<String, Integer> {
+            'loanRecCount' => loanRecCount, 
+            'trialRecCount' => trialRecCount
+        };
     }
 }
